# systemid-updater

./: CMakeLists.txt  main.c
crc/: crc.c  crc.h
eeprom/: eeprom.c  eeprom.h
